Remove flicker issue

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -4,6 +4,10 @@ body {
   color: #333;
 }
 
+body.modal-open nav {
+  padding-right: 1rem !important;
+}
+
 h1,
 h2,
 h3,
